2005-12-19  Marcus Meissner  <marcus@jet.franken.de>

	* Added Canon IXUS 750.
	* Added HP PhotoSmart M23.

2005-12-18  Hubert Figuiere  <hub@figuiere.net>

	* Added Kodak V530.

2005-12-18  Marcus Meissner  <marcus@jet.franken.de>

	* library.c, ptp.c, ptp.h:

	  Synchronized Nikon defines with libptp2.
	
	  Added Nikon (special) capture, checkevent, check readyness

2005-12-08  Marcus Meissner  <marcus@jet.franken.de>

	* Added Nikon Coolpix P2.
	* Added Ricoh R3 (print mode).
	* Added Kodak Easyshare C31, reported by Giulio Salani.
	* Added Canon PowerShot A620, reported by Tom Roelz.
	* Added iRiver T20, reported by Martin Senst.
	* Added HP Photosmart M415, mentioned in a bugreport.
	* Added Canon PowerShot A610, reported by Andriy Kulchyts.
	* Added Olympus d-540z, c-310z, x-100, reported by Bruno Parente.
	* Added Panasonic DMC-LZ2, reported by Jens Stutte.
	* Added iRiver T30, reported by Bruno Parente Lima.
	* Added Nikon D50.
	* Added iRiver T10 with alternate ID, reported by Jay MacDonald.

2005-10-28  Marcus Meissner  <marcus@jet.franken.de>
	
	* Added Canon Digital IXUS 55, PowerShot SD450.
	* Added Canon PowerShot A410
	* Added Nikon Coolpix 4800.

	* library.c: Do partial read only if there is enough to read.
	  (from Jon Burgess)

2005-10-24  Marcus Meissner  <marcus@jet.franken.de>

	* Added Kodak C300 as reported.
	* Added Kodak V550 as reported.

2005-10-13  Marcus Meissner  <marcus@jet.franken.de>
	
	* Added iRiver T10.
	  This is an MTP device, but the user reported being able to
	  browse the filesystem and to download stuff.

2005-09-24  Marcus Meissner  <marcus@jet.franken.de>

	* README: Added Copyrights Marcus & Hubert
		  Added documentation URLs.

2005-08-11  Hubert Figuiere  <hfiguiere@teaser.fr>

	* library.c: Added Coolpix 5600.

2005-08-07  Marcus Meissner  <marcus@jet.franken.de>
	
	* library.c: Added Kodak C340 (mail by Maurizio Daniele <hayabusa@portalis.it>)

2005-07-31  Marcus Meissner  <marcus@jet.franken.de>
	